<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_login"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etlclt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/adresse_email"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etpclt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veuillez_inscrire"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_inscrire"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>


</LinearLayout>