<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectUser"
            android:layout_marginBottom="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnLoginAgence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectAgency"
            android:layout_marginBottom="10dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_inscrire"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/appname"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/notre_application_mobile"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

</LinearLayout>